Custumers+social_net

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
           <h2 class="visually-hidden">Our principles</h2>
           <ul class="advan-list list">
             <li class="advan-list-item">
+              <div class="rectangle">
+                <svg class="advan-icon-list-item" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-principles-title">Strategy</h3>
               <p class="section-principles-title-text">
                 Our goal is to identify the business problem to walk away with
@@ -90,6 +95,11 @@
               </p>
             </li>
             <li class="advan-list-item">
+              <div class="rectangle">
+                <svg class="advan-icon-list-item" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-principles-title">Punctuality</h3>
               <p class="section-principles-title-text">
                 Bring the key message to the brand's audience for the best price
@@ -97,6 +107,11 @@
               </p>
             </li>
             <li class="advan-list-item">
+              <div class="rectangle">
+                <svg class="advan-icon-list-item" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-principles-title">Diligence</h3>
               <p class="section-principles-title-text">
                 Research and confirm brands that present the strongest digital
@@ -104,6 +119,11 @@
               </p>
             </li>
             <li class="advan-list-item">
+              <div class="rectangle">
+                <svg class="advan-icon-list-item" width="64" height="64">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-principles-title">Technologies</h3>
               <p class="section-principles-title-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -150,6 +170,18 @@
               <div class="plash-card">
                 <h3 class="section-principles-title">Mark Guerrero</h3>
                 <p class="section-principles-title-text">Product Designer</p>
+                <svg class="ellipse" width="16" height="16">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+                <svg class="ellipse" width="16" height="16">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+                <svg class="ellipse" width="16" height="16">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+                <svg class="ellipse" width="16" height="16">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
               </div>
             </li>
             <li class="advan-list-item section-team-card">
@@ -188,6 +220,42 @@
           </ul>
         </div>
       </section>
+
+       <!-- CUSTOMERS -->
+    <section class="section section-customers">
+      <div class="container">
+        <h2 class="section-what-title">Customers</h2>
+        <ul class="customers-list list">
+          <li class="customers-list-item">
+            <svg class="client" width="104" height="56">
+              <use href="./images/sprite.svg#icon-logo1"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="client" width="104" height="56">
+              <use href="./images/sprite.svg#icon-logo2"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="client" width="104" height="56">
+              <use href="./images/sprite.svg#icon-logo3"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="client" width="104" height="56">
+              <use href="./images/sprite.svg#icon-logo4"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="client" width="104" height="56">
+              <use href="./images/sprite.svg#icon-logo5"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="client" width="104" height="56">
+              <use href="./images/sprite.svg#icon-logo6"></use>
+            </svg>
+          </li>
     </main>
 
     <!-- Footer -->
