Section Customer - finished

--- a/index.html
+++ b/index.html
@@ -231,27 +231,27 @@
               <use href="./images/sprite.svg#icon-logo1"></use>
             </svg>
           </li>
-          <li>
+          <li class="customers-list-item">
             <svg class="client" width="104" height="56">
               <use href="./images/sprite.svg#icon-logo2"></use>
             </svg>
           </li>
-          <li>
+          <li class="customers-list-item">
             <svg class="client" width="104" height="56">
               <use href="./images/sprite.svg#icon-logo3"></use>
             </svg>
           </li>
-          <li>
+          <li class="customers-list-item">
             <svg class="client" width="104" height="56">
               <use href="./images/sprite.svg#icon-logo4"></use>
             </svg>
           </li>
-          <li>
+          <li class="customers-list-item">
             <svg class="client" width="104" height="56">
               <use href="./images/sprite.svg#icon-logo5"></use>
             </svg>
           </li>
-          <li>
+          <li class="customers-list-item">
             <svg class="client" width="104" height="56">
               <use href="./images/sprite.svg#icon-logo6"></use>
             </svg>
