--- a/index.html
+++ b/index.html
@@ -165,23 +165,40 @@
               <img
                 src="./images/photo1.jpg"
                 alt="photo1 Product Designer"
-                width="264"
-              />
+                width="264"/>
               <div class="plash-card">
                 <h3 class="section-principles-title">Mark Guerrero</h3>
                 <p class="section-principles-title-text">Product Designer</p>
-                <svg class="ellipse" width="16" height="16">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-                <svg class="ellipse" width="16" height="16">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-                <svg class="ellipse" width="16" height="16">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-                <svg class="ellipse" width="16" height="16">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="advan-list-item section-team-card">
@@ -193,6 +210,36 @@
               <div class="plash-card">
                 <h3 class="section-principles-title">Tom Ford</h3>
                 <p class="section-principles-title-text">Frontend Developer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="advan-list-item section-team-card">
@@ -204,6 +251,36 @@
               <div class="plash-card">
                 <h3 class="section-principles-title">Camila Garcia</h3>
                 <p class="section-principles-title-text">Marketing</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="advan-list-item section-team-card">
@@ -215,6 +292,36 @@
               <div class="plash-card">
                 <h3 class="section-principles-title">Daniel Wilson</h3>
                 <p class="section-principles-title-text">UI Designer</p>
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-item-link" href="/">
+                      <svg class="ellipse" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
