--- a/index.html
+++ b/index.html
@@ -367,14 +367,48 @@
 
     <!-- Footer -->
     <footer class="section footer">
-      <div class="container">
-        <a class="link header-logo" href="./index.html"
-          >Web<span class="header-logo-white">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container-footer container">
+        <div class="webstudio-footer container">
+          <a class="link header-logo" href="./index.html"
+            >Web<span class="header-logo-white">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="social-media-title">Social media</p>
+          <ul class="social-media-list list">
+            <li class="social-media-item">
+              <a class="social-media-link-footer" href="/">
+                <svg class="ellipse-footer" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-instagram-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link-footer" href="/">
+                <svg class="ellipse-footer" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-twitter-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link-footer" href="/">
+                <svg class="ellipse-footer" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-facebook-footer"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-media-item">
+              <a class="social-media-link-footer" href="/">
+                <svg class="ellipse-footer" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-linkedin-footer"></use>
+                </svg>
+              </a>
+            </li>
+        </div>
       </div>
     </footer>
   </body>
