--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
           <!-- Row 1, 2, 3 -->
           <ul class="project-card list">
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link">
                 <img
                   src="./images/card-1.jpg"
                   alt="Banking App Interface Concept"
