--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <!-- PAGES -->
           <ul class="nav-link list">
             <li class="pages-list-item">
-              <a class="link pages-list-item-link" href="./index.html"
+              <a class="pages-list-item-link current link" href="./index.html"
                 >Studio</a
               >
             </li>
