--- a/portfolio.html
+++ b/portfolio.html
@@ -29,17 +29,17 @@
           <!-- PAGES -->
           <ul class="nav-link list">
             <li class="pages-list-item">
-              <a class="link pages-list-item-link" href="./index.html"
+              <a class="pages-list-item-link current link" href="./index.html"
                 >Studio</a
               >
             </li>
             <li class="pages-list-item">
-              <a class="link pages-list-item-link" href="./portfolio.html"
+              <a class="pages-list-item-link current link" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
             <li class="pages-list-item">
-              <a class="link pages-list-item-link" href="">Contacts</a>
+              <a class="pages-list-item-link current link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
