--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
           <!-- PAGES -->
           <ul class="nav-link list">
             <li class="pages-list-item">
-              <a class="pages-list-item-link current link" href="./index.html"
+              <a class="pages-list-item-link link" href="./index.html"
                 >Studio</a
               >
             </li>
@@ -39,7 +39,7 @@
               >
             </li>
             <li class="pages-list-item">
-              <a class="pages-list-item-link current link" href="">Contacts</a>
+              <a class="pages-list-item-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -91,11 +91,17 @@
           <ul class="project-card list">
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img
+                <div class="portfolio-box">
+                  <img
                   src="./images/card-1.jpg"
                   alt="Banking App Interface Concept"
-                  width="360"
-                />
+                  width="360"/>
+                  <div class="overlay">
+                    <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">
                     Banking App Interface Concept
@@ -105,7 +111,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link link">
                 <img
                   src="./images/card-2.jpg"
                   alt="Cashless Payment"
@@ -118,7 +124,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link link">
                 <img
                   src="./images/card-3.jpg"
                   alt="Meditation App"
@@ -131,7 +137,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link link">
                 <img src="./images/card-4.jpg" alt="Taxi Service" width="360" />
                 <div class="card-content">
                   <h2 class="section-principles-title">Taxi Service</h2>
@@ -140,7 +146,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link link">
                 <img
                   src="./images/card-5.jpg"
                   alt="Screen Illustrations"
@@ -153,7 +159,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link link">
                 <img
                   src="./images/card-6.jpg"
                   alt="Online Courses"
@@ -166,7 +172,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link link">
                 <img
                   src="./images/card-7.jpg"
                   alt="Instagram Stories Concept"
@@ -181,7 +187,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link link">
                 <img src="./images/card-8.jpg" alt="Organic Food" width="360" />
                 <div class="card-content">
                   <h2 class="section-principles-title">Organic Food</h2>
@@ -190,7 +196,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="link">
+              <a class="project-card-link link link">
                 <img src="./images/card-9.jpg" alt="Fresh Coffee" width="360" />
                 <div class="card-content">
                   <h2 class="section-principles-title">Fresh Coffee</h2>
