--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
               <img
                 src="./images/photo1.jpg"
                 alt="photo1 Product Designer"
-                width="264"/>
+                width="264"
+              />
               <div class="plash-card">
                 <h3 class="section-principles-title">Mark Guerrero</h3>
                 <p class="section-principles-title-text">Product Designer</p>
@@ -328,41 +329,44 @@
         </div>
       </section>
 
-       <!-- CUSTOMERS -->
-    <section class="section section-customers">
-      <div class="container">
-        <h2 class="section-what-title">Customers</h2>
-        <ul class="customers-list list">
-          <li class="customers-list-item">
-            <svg class="client" width="104" height="56">
-              <use href="./images/sprite.svg#icon-logo1"></use>
-            </svg>
-          </li>
-          <li class="customers-list-item">
-            <svg class="client" width="104" height="56">
-              <use href="./images/sprite.svg#icon-logo2"></use>
-            </svg>
-          </li>
-          <li class="customers-list-item">
-            <svg class="client" width="104" height="56">
-              <use href="./images/sprite.svg#icon-logo3"></use>
-            </svg>
-          </li>
-          <li class="customers-list-item">
-            <svg class="client" width="104" height="56">
-              <use href="./images/sprite.svg#icon-logo4"></use>
-            </svg>
-          </li>
-          <li class="customers-list-item">
-            <svg class="client" width="104" height="56">
-              <use href="./images/sprite.svg#icon-logo5"></use>
-            </svg>
-          </li>
-          <li class="customers-list-item">
-            <svg class="client" width="104" height="56">
-              <use href="./images/sprite.svg#icon-logo6"></use>
-            </svg>
-          </li>
+      <!-- CUSTOMERS -->
+      <section class="section section-customers">
+        <div class="container">
+          <h2 class="section-what-title">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-list-item">
+              <svg class="client" width="104" height="56">
+                <use href="./images/sprite.svg#icon-logo1"></use>
+              </svg>
+            </li>
+            <li class="customers-list-item">
+              <svg class="client" width="104" height="56">
+                <use href="./images/sprite.svg#icon-logo2"></use>
+              </svg>
+            </li>
+            <li class="customers-list-item">
+              <svg class="client" width="104" height="56">
+                <use href="./images/sprite.svg#icon-logo3"></use>
+              </svg>
+            </li>
+            <li class="customers-list-item">
+              <svg class="client" width="104" height="56">
+                <use href="./images/sprite.svg#icon-logo4"></use>
+              </svg>
+            </li>
+            <li class="customers-list-item">
+              <svg class="client" width="104" height="56">
+                <use href="./images/sprite.svg#icon-logo5"></use>
+              </svg>
+            </li>
+            <li class="customers-list-item">
+              <svg class="client" width="104" height="56">
+                <use href="./images/sprite.svg#icon-logo6"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!-- Footer -->
@@ -408,6 +412,7 @@
                 </svg>
               </a>
             </li>
+          </ul>
         </div>
       </div>
     </footer>
