--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,9 @@
               >
             </li>
             <li class="pages-list-item">
-              <a class="pages-list-item-link current link" href="./portfolio.html"
+              <a
+                class="pages-list-item-link current link"
+                href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -93,12 +95,15 @@
               <a class="project-card-link link">
                 <div class="portfolio-box">
                   <img
-                  src="./images/card-1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"/>
+                    src="./images/card-1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
                   <div class="overlay">
                     <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
                     </p>
                   </div>
                 </div>
@@ -252,6 +257,7 @@
                 </svg>
               </a>
             </li>
+          </ul>
         </div>
       </div>
     </footer>
