--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li class="advan-list-item">
               <div class="rectangle">
                 <svg class="advan-icon-list-item" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="section-principles-title">Strategy</h3>
@@ -97,7 +97,7 @@
             <li class="advan-list-item">
               <div class="rectangle">
                 <svg class="advan-icon-list-item" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="section-principles-title">Punctuality</h3>
@@ -109,7 +109,7 @@
             <li class="advan-list-item">
               <div class="rectangle">
                 <svg class="advan-icon-list-item" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="section-principles-title">Diligence</h3>
@@ -121,7 +121,7 @@
             <li class="advan-list-item">
               <div class="rectangle">
                 <svg class="advan-icon-list-item" width="64" height="64">
-                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="section-principles-title">Technologies</h3>
@@ -174,28 +174,28 @@
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -215,28 +215,28 @@
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -256,28 +256,28 @@
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -297,28 +297,28 @@
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-item-link" href="/">
                       <svg class="ellipse" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -335,34 +335,46 @@
           <h2 class="section-what-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-list-item">
-              <svg class="client" width="104" height="56">
-                <use href="./images/sprite.svg#icon-logo1"></use>
-              </svg>
+              <a class="customers-link link" href="/">
+                <svg class="client" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo1"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="client" width="104" height="56">
-                <use href="./images/sprite.svg#icon-logo2"></use>
-              </svg>
+              <a class="customers-link link" href="/">
+                <svg class="client" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo2"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="client" width="104" height="56">
-                <use href="./images/sprite.svg#icon-logo3"></use>
-              </svg>
+              <a class="customers-link link" href="/">
+                <svg class="client" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo3"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="client" width="104" height="56">
-                <use href="./images/sprite.svg#icon-logo4"></use>
-              </svg>
+              <a class="customers-link link" href="/">
+                <svg class="client" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo4"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="client" width="104" height="56">
-                <use href="./images/sprite.svg#icon-logo5"></use>
-              </svg>
+              <a class="customers-link link" href="/">
+                <svg class="client" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo5"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-list-item">
-              <svg class="client" width="104" height="56">
-                <use href="./images/sprite.svg#icon-logo6"></use>
-              </svg>
+              <a class="customers-link link" href="/">
+                <svg class="client" width="104" height="56">
+                  <use href="./images/icons.svg#icon-logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -387,28 +399,28 @@
             <li class="social-media-item">
               <a class="social-media-link-footer" href="/">
                 <svg class="ellipse-footer" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram-footer"></use>
+                  <use href="./images/icons.svg#icon-instagram-footer"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a class="social-media-link-footer" href="/">
                 <svg class="ellipse-footer" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter-footer"></use>
+                  <use href="./images/icons.svg#icon-twitter-footer"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a class="social-media-link-footer" href="/">
                 <svg class="ellipse-footer" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook-footer"></use>
+                  <use href="./images/icons.svg#icon-facebook-footer"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a class="social-media-link-footer" href="/">
                 <svg class="ellipse-footer" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin-footer"></use>
+                  <use href="./images/icons.svg#icon-linkedin-footer"></use>
                 </svg>
               </a>
             </li>
@@ -422,7 +434,7 @@
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-btn-icon" width="8" height="8">
-            <use href="./images/sprite.svg#icon-close-black"></use>
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
       </div>
