--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link link">
+              <a class="project-card-link link">
                 <img
                   src="./images/card-2.jpg"
                   alt="Cashless Payment"
@@ -129,7 +129,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link link">
+              <a class="project-card-link link">
                 <img
                   src="./images/card-3.jpg"
                   alt="Meditation App"
@@ -142,7 +142,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link link">
+              <a class="project-card-link link">
                 <img src="./images/card-4.jpg" alt="Taxi Service" width="360" />
                 <div class="card-content">
                   <h2 class="section-principles-title">Taxi Service</h2>
@@ -151,7 +151,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link link">
+              <a class="project-card-link link">
                 <img
                   src="./images/card-5.jpg"
                   alt="Screen Illustrations"
@@ -164,7 +164,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link link">
+              <a class="project-card-link link">
                 <img
                   src="./images/card-6.jpg"
                   alt="Online Courses"
@@ -177,7 +177,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link link">
+              <a class="project-card-link link">
                 <img
                   src="./images/card-7.jpg"
                   alt="Instagram Stories Concept"
@@ -192,7 +192,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link link">
+              <a class="project-card-link link">
                 <img src="./images/card-8.jpg" alt="Organic Food" width="360" />
                 <div class="card-content">
                   <h2 class="section-principles-title">Organic Food</h2>
@@ -201,7 +201,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link link">
+              <a class="project-card-link link">
                 <img src="./images/card-9.jpg" alt="Fresh Coffee" width="360" />
                 <div class="card-content">
                   <h2 class="section-principles-title">Fresh Coffee</h2>
@@ -232,28 +232,28 @@
             <li class="social-media-item">
               <a class="social-media-link-footer" href="/">
                 <svg class="ellipse-footer" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram-footer"></use>
+                  <use href="./images/icons.svg#icon-instagram-footer"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a class="social-media-link-footer" href="/">
                 <svg class="ellipse-footer" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter-footer"></use>
+                  <use href="./images/icons.svg#icon-twitter-footer"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a class="social-media-link-footer" href="/">
                 <svg class="ellipse-footer" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook-footer"></use>
+                  <use href="./images/icons.svg#icon-facebook-footer"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-item">
               <a class="social-media-link-footer" href="/">
                 <svg class="ellipse-footer" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin-footer"></use>
+                  <use href="./images/icons.svg#icon-linkedin-footer"></use>
                 </svg>
               </a>
             </li>
