--- a/portfolio.html
+++ b/portfolio.html
@@ -99,13 +99,11 @@
                     alt="Banking App Interface Concept"
                     width="360"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">
@@ -117,11 +115,18 @@
             </li>
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img
-                  src="./images/card-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+                <div class="portfolio-box">
+                  <img
+                    src="./images/card-2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">Cashless Payment</h2>
                   <p class="cadr-text">Marketing</p>
@@ -130,11 +135,18 @@
             </li>
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img
-                  src="./images/card-3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
+                <div class="portfolio-box">
+                  <img
+                    src="./images/card-3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">Meditation App</h2>
                   <p class="cadr-text">App</p>
@@ -143,7 +155,18 @@
             </li>
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img src="./images/card-4.jpg" alt="Taxi Service" width="360" />
+                <div class="portfolio-box">
+                  <img
+                    src="./images/card-4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">Taxi Service</h2>
                   <p class="cadr-text">Marketing</p>
@@ -152,11 +175,18 @@
             </li>
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img
-                  src="./images/card-5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+                <div class="portfolio-box">
+                  <img
+                    src="./images/card-5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">Screen Illustrations</h2>
                   <p class="cadr-text">Design</p>
@@ -165,11 +195,18 @@
             </li>
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img
-                  src="./images/card-6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                <div class="portfolio-box">
+                  <img
+                    src="./images/card-6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">Online Courses</h2>
                   <p class="cadr-text">Marketing</p>
@@ -178,11 +215,18 @@
             </li>
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img
-                  src="./images/card-7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+                <div class="portfolio-box">
+                  <img
+                    src="./images/card-7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">
                     Instagram Stories Concept
@@ -193,7 +237,18 @@
             </li>
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img src="./images/card-8.jpg" alt="Organic Food" width="360" />
+                <div class="portfolio-box">
+                  <img
+                    src="./images/card-8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">Organic Food</h2>
                   <p class="cadr-text">Web Site</p>
@@ -202,7 +257,18 @@
             </li>
             <li class="project-card-list">
               <a class="project-card-link link">
-                <img src="./images/card-9.jpg" alt="Fresh Coffee" width="360" />
+                <div class="portfolio-box">
+                  <img
+                    src="./images/card-9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="card-content">
                   <h2 class="section-principles-title">Fresh Coffee</h2>
                   <p class="cadr-text">Web Site</p>
