--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
           <!-- Row 1, 2, 3 -->
           <ul class="project-card list">
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-1.jpg"
@@ -114,7 +114,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-2.jpg"
@@ -134,7 +134,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-3.jpg"
@@ -154,7 +154,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-4.jpg"
@@ -174,7 +174,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-5.jpg"
@@ -194,7 +194,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-6.jpg"
@@ -214,7 +214,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-7.jpg"
@@ -236,7 +236,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-8.jpg"
@@ -256,7 +256,7 @@
               </a>
             </li>
             <li class="project-card-list">
-              <a class="project-card-link link">
+              <a class="project-card-link link" href="/">
                 <div class="portfolio-box">
                   <img
                     src="./images/card-9.jpg"
